[project]
name            = "gramgrab"
version         = "0.1.2"
description     = "Telegram backup and OSINT tool"
authors         = [ {name = "Bart",email = "scarfboy@gmail.com"} ]
readme          = "README.md"
requires-python = ">=3.9"
packages        = [ {include = "gramgrab", from ="src"} ]     
license         = "AGPL"
dependencies    = [ 
    "telethon (>=1.43.2,<2.0.0)", 
    "msgpack (>=1.1.2,<2.0.0)", 
    "dotenv (>=0.9.9,<0.10.0)" 
]

[project.scripts]                                                                                                              
gramgrab        = "gramgrab.cli:fetcher_main"
gramparse       = "gramgrab.cli:reader_main"

[build-system]
requires        = ["poetry-core>=2.0.0,<3.0.0"]
build-backend   = "poetry.core.masonry.api"
